--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.13.0",
+    "prisma": "^4.10.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
