--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"sourceMap": true, 
+		"sourceMap": true,
 		"outDir": "dist",
 		"lib": ["esnext"],
-		"esModuleInterop": true,
+		"esModuleInterop": true
 	}
 }
